# package-downloader-repo

./: AGENTS.md  README.md  pyproject.toml
configs/: config.yaml
data/errors/: docker.errors.jsonl  maven.errors.jsonl
data/input/full/: docker_2p.csv
data/input/sample/: docker_2p.csv  maven_2p.csv  npm_2p.csv  pypi_2p.csv
data/offsets/: docker.offset.json  maven.offset.json  npm.offset.json  pypi.offset.json
src/package_downloader/: __init__.py  batcher.py  cli.py  config.py  errors.py  io.py  logging_utils.py  models.py  offsets.py
src/package_downloader/repos/: __init__.py  base.py  docker.py  maven.py  npm.py  pypi.py  registry.py
